Install default feature pack config if no layers are provided